Mencoba branch fitur-kategori lalu menghapusnya

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
   <body>
     <div class="Container">
       <p class="open">
-        Halo sobat Jualan apa kabar?<br />
+        Halo sobat Jualan apa kabar??<br />
         login dulu yuk biar bisa lanjut jualan / beli barang bareng kami
       </p>
       <h1>Login</h1>
