--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <div class="d-flex order-lg-3 order-2">
           <ul class="navbar-nav flex-row align-items-center">
             <li class="nav-item me-3">
-              <a class="nav-link text-light p-0" href="index.html">Home</a>
+              <a class="nav-link text-light p-0" href="{{ url_for('halamanLogin')}}">Home</a>
             </li>
             <li class="nav-item me-2">
               <a class="btn btn-sm btn-outline-light rounded-pill px-3" href="keranjang.html">
